# clever_sync

./: .gitignore  main.py  pyproject.toml
src/clever_sync/: __init__.py  base_sheet.py  enrollments.py  sections.py  sftp_sync.py  students.py  teachers.py
